@@ -1,3 +1,12 @@
+2007-02-07  Daniel Franke  <franke.daniel@gmail.com>
+
+	Backport from mainline:
+	2007-01-31  Daniel Franke <franke.daniel@gmail.com>
+
+	PR libgomp/30546
+	* acx.m4 (ACX_PROG_CHECK_VER): Locate a program and check that its
+	version is acceptable.
+
 2006-12-04  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* tls.m4 (GCC_CHECK_TLS): Do not test TLS with static linking
